# conan_behaviour_sample

./: LICENSE  README.md  build.sh
hello/: conanfile.py
hello/src/: hello.h
hello_prebuild/: conanfile.py
hellov2/: conanfile.py
hellov2/src/: hello.cpp  hello.h
rootLib/: conanfile.py
rootLib/src/: CMakeLists.txt  main.cpp
testLib/: CMakeLists.txt  conanfile.py
testLib/src/: test.cpp  test.h
testLib/test/: first.cpp
